--- a/Engineering/fin-track-ks/package.json
+++ b/Engineering/fin-track-ks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taskdesk",
+  "name": "fin-track-ks",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,18 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.50.5",
     "@tailwindcss/vite": "^4.1.11",
-    "clsx": "^2.1.1",
     "flowbite": "^3.1.2",
-    "framer-motion": "^12.23.3",
     "react": "^19.1.0",
-    "react-calendar-heatmap": "^1.10.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router": "^7.7.1",
     "react-router-dom": "^7.7.1",
-    "recharts": "^3.1.0",
-    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
