--- a/Finance Tracker/ft-demo/package.json
+++ b/Finance Tracker/ft-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "batch-2",
+  "name": "ft-demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.54.0",
     "@tailwindcss/vite": "^4.1.11",
     "flowbite": "^3.1.2",
     "react": "^19.1.1",
